browse sidebar collapse fix, terminate video preview fix

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -289,3 +289,202 @@ font-weight: 600;
   text-overflow: ellipsis; 
 }
 /* sprint16-v1 end */
+li.has-children.is-open > .acnav__label {
+  font-weight: 600;
+}
+
+.form__title {
+	color: #5c5d5e;
+	font-size: 2rem;
+	font-weight: 700;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #adadae;
+}
+
+/* form wrapper */
+
+.form__wrapper {
+	padding: 0;
+}
+
+/* hide checkboxes */
+
+.form__folder input[type="checkbox"] {
+	position: absolute;
+	left: -999rem;
+}
+
+/* common rules for labels and links */
+
+.form__folder label,
+.form__folder a {
+	display: block;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-left: 25px;
+	cursor: pointer;
+	position: relative;
+	clear: left;
+	text-transform: capitalize;
+}
+
+/* form labels */
+
+.form__folder label {
+	float: left;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  color: #000;
+  font-size: 1.2rem;
+  font-weight: normal;
+  margin-bottom: 0px;
+}
+
+/* form links */
+
+.form__folder a {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	text-decoration: none;
+	color: #5c5d5e;
+	text-transform: capitalize;
+	font-size: 1.6rem;
+}
+
+/* disable outline */
+
+.form__folder a:hover,
+.form__folder a:focus {
+	outline: none;
+}
+
+/* set font-family FontAwesome for label and link */
+
+.form__folder label::before,
+.form__folder a::before {
+	display: block;
+	position: absolute;
+	font-family: 'FontAwesome';
+	top: -1px;
+	left: -25px;
+}
+
+/* icon closed folder */
+
+.form__folder input[type="checkbox"] + label::before {
+	content: '\f07b';
+}
+
+/* icon opened folder */
+
+.form__folder input[type="checkbox"]:checked + label::before {
+	content: '\f07c';
+}
+
+/* icon link */
+
+.form__folder a::before {
+	content: '\f068';
+}
+
+/* make subfolder invisible */
+
+.form__subfolder {
+	display: none;
+	margin-left: 30px;
+	clear: left;
+}
+
+/* make subfolder visible */
+
+.form__folder input[type="checkbox"]:checked ~ .form__subfolder {
+	display: block;
+}
+
+/* custom tree */
+.customToggle {
+  padding: 0px;
+}
+.nav-wrap {
+  width: 100%;
+  margin: 0 auto 0;
+}
+
+[hidden] {
+  display: none;
+  visibility: hidden;
+}
+
+.acnav {
+  width: 100%;
+}
+.acnav__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.acnav__list--level1 {
+  border: 0px solid #fcfcfc;
+}
+.has-children > .acnav__label::before {
+  content: ">";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  margin-right: 1em;
+  transition: transform 0.3s;
+  background-image: url(../../../assets/images/left-arrow.svg);
+  background-position: 0px 0px;
+  background-repeat: repeat;
+  background-size: 9px;
+  background-repeat: no-repeat;
+  color: transparent;
+  width: 10px;
+  height: 18px;
+}
+.has-children.is-open > .acnav__label::before {
+  transform: rotate(450deg);
+}
+.acnav__link, .acnav__label {
+  display: block;
+  font-size: 1.2rem;
+  padding: 0.8em;
+  margin: 0;
+  cursor: pointer;
+  color: #000;
+  background: #e1bb33;
+  box-shadow: inset 0 -1px #eaeae8;
+  transition: color 0.25s ease-in, background-color 0.25s ease-in;
+}
+.acnav__link:focus, .acnav__link:hover, .acnav__label:focus, .acnav__label:hover {
+  color: #000;
+  background: #e1bb33;
+}
+.acnav__link--level2, .acnav__label--level2 {
+  padding-left: 3em;
+  background: transparent;
+}
+.acnav__link--level2:focus, .acnav__link--level2:hover, .acnav__label--level2:focus, .acnav__label--level2:hover {
+  background: transparent;
+}
+.acnav__link--level3, .acnav__label--level3 {
+  padding-left: 5em;
+  background: transparent;
+}
+.acnav__link--level3:focus, .acnav__link--level3:hover, .acnav__label--level3:focus, .acnav__label--level3:hover {
+  background: transparent;
+}
+.acnav__link--level4, .acnav__label--level4 {
+  padding-left: 7em;
+  background: transparent;
+}
+.acnav__link--level4:focus, .acnav__link--level4:hover, .acnav__label--level4:focus, .acnav__label--level4:hover {
+  background: #214f5c;
+}
+.acnav__list--level2, .acnav__list--level3, .acnav__list--level4 {
+  display: none;
+}
+.is-open > .acnav__list--level2, .is-open > .acnav__list--level3, .is-open > .acnav__list--level4 {
+  display: block;
+}
